# styx

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: development_task.yaml
.github/workflows/: docs.yaml  publish-pypi.yaml  test.yaml
src/styx/: cli.py
src/styx/backend/: __init__.py  common.py  compile.py  styxdefs_compat.py
src/styx/backend/boutiques/: core.py
src/styx/backend/generic/: core.py  languageprovider.py  utils.py
src/styx/backend/jsonschema/: __init__.py
src/styx/backend/python/: languageprovider.py  templates.py
src/styx/backend/r/: languageprovider.py
src/styx/backend/typescript/: languageprovider.py  templates.py
src/styx/frontend/boutiques/: core.py
src/styx/ir/: core.py  normalize.py  optimize.py  serialize.py  stats.py  typeguards.py
tests/utils/: compile_boutiques.py  dummy_runner.py
