[project]
name = "styx"
version = "0.1.1"
description = "Boutiques code generator"
authors = [{name = "Florian Rupprecht", email = "floruppr@gmail.com"}]
requires-python = ">=3.12.0, <3.13"
readme = "README.md"
license = "LGPL-2.1"
dependencies = [
    "typing-extensions>=4.12.2",
]

[project.scripts]
styx = "styx.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2.2,<9",
  "mypy>=1.10.1,<2",
  "pre-commit>=4.0.1,<5",
  "pytest-cov>=6.0.0,<8",
  "ruff>=0.8.0,<0.14",
  "styxdefs>=0.5.0,<0.6"
]
docs = ["pdoc>=15.0.0,<16"]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
preview = true
extend-exclude = ["examples"]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "D100",  # Missing docstring in public module.
  "D101",  # Missing docstring in public class.
  "D102",  # Missing docstring in public method.
  "D103",  # Missing docstring in public function.
  "D107"  # Missing docstring in __init__.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
